@@ -252,6 +252,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 27342) Add audir param to list=allusers
 * (bug 27203) add fato param to list=filearchive
 * (bug 27341) Add drto param to list=deletedrevs
+* (bug 26630) Add api for Special:ActiveUsers
 
 === Languages updated in 1.18 ===
 
